// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PasswordInput matches snapshot (via server): client 1`] = `
<div>
  <div
    class="nhsuk-form-group nhsuk-password-input"
    data-module="nhsuk-password-input"
    data-nhsuk-password-input-init=""
  >
    <label
      class="nhsuk-label nhsuk-label--l"
      for="password"
      id="password--label"
    >
      Password
    </label>
    <div
      class="nhsuk-input-wrapper"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="nhsuk-input nhsuk-password-input__input nhsuk-js-password-input-input"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="nhsuk-password-input__sr-status nhsuk-u-visually-hidden"
      />
      <button
        aria-controls="password"
        aria-label="Show password"
        class="nhsuk-button nhsuk-button--secondary nhsuk-button--small nhsuk-password-input__toggle nhsuk-js-password-input-toggle"
        data-module="nhsuk-button"
        data-nhsuk-button-init=""
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;

exports[`PasswordInput matches snapshot (via server): server 1`] = `
<div>
  <div
    class="nhsuk-form-group nhsuk-password-input"
    data-module="nhsuk-password-input"
  >
    <label
      class="nhsuk-label nhsuk-label--l"
      for="password"
      id="password--label"
    >
      Password
    </label>
    <div
      class="nhsuk-input-wrapper"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="nhsuk-input nhsuk-password-input__input nhsuk-js-password-input-input"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <button
        aria-controls="password"
        aria-label="Show password"
        class="nhsuk-button nhsuk-button--secondary nhsuk-button--small nhsuk-password-input__toggle nhsuk-js-password-input-toggle"
        data-module="nhsuk-button"
        hidden=""
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;

exports[`PasswordInput matches snapshot: PasswordInput 1`] = `
<div>
  <div
    class="nhsuk-form-group nhsuk-password-input"
    data-module="nhsuk-password-input"
    data-nhsuk-password-input-init=""
  >
    <label
      class="nhsuk-label nhsuk-label--l"
      for="password"
      id="password--label"
    >
      Password
    </label>
    <div
      class="nhsuk-input-wrapper"
    >
      <input
        autocapitalize="none"
        autocomplete="current-password"
        class="nhsuk-input nhsuk-password-input__input nhsuk-js-password-input-input"
        id="password"
        name="password"
        spellcheck="false"
        type="password"
      />
      <div
        aria-live="polite"
        class="nhsuk-password-input__sr-status nhsuk-u-visually-hidden"
      />
      <button
        aria-controls="password"
        aria-label="Show password"
        class="nhsuk-button nhsuk-button--secondary nhsuk-button--small nhsuk-password-input__toggle nhsuk-js-password-input-toggle"
        data-module="nhsuk-button"
        data-nhsuk-button-init=""
        type="button"
      >
        Show
      </button>
    </div>
  </div>
</div>
`;
